[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/Manrope-VariableFont_wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Load_menu.gd" type="Script" id=2]
[ext_resource path="res://fonts/ARCADECLASSIC.TTF" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 23
font_data = ExtResource( 1 )

[node name="Load_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
margin_right = 1031.0
margin_bottom = 584.0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -288.0
margin_right = 512.0
margin_bottom = 288.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 1 )
text = "Choose save slot"
align = 1

[node name="Slot 1" type="TextureButton" parent="CanvasLayer/VBoxContainer"]
margin_top = 55.0
margin_right = 1024.0
margin_bottom = 55.0

[node name="Slot 2" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 59.0
margin_right = 1024.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 2 )
text = "Save slot 2"

[node name="Slot 3" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 101.0
margin_right = 1024.0
margin_bottom = 139.0
custom_fonts/font = SubResource( 2 )
text = "Save slot 3"

[node name="Back" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 143.0
margin_right = 1024.0
margin_bottom = 181.0
custom_fonts/font = SubResource( 2 )
text = "Back"
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Slot 1" to="." method="_on_Slot_1_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Slot 2" to="." method="_on_Slot_2_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Slot 3" to="." method="_on_Slot_3_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
